--- a/trunk/AUTHORS
+++ b/trunk/AUTHORS
@@ -1,3 +1,4 @@
+Brice Boyer <bbboyer@ncsu.edu>
 Jean-Guillaume Dumas <Jean-Guillaume.Dumas@imag.fr>
 Pascal Giorgi <pascal.giorgi@univ-perp.fr>
 Clément Pernet <Clement.Pernet@imag.fr>
