--- a/trunk/AUTHORS
+++ b/trunk/AUTHORS
@@ -1,7 +1,7 @@
 Brice Boyer <bbboyer@ncsu.edu>
 Alexis Breust <alexis.breust@imag.fr>
 Jean-Guillaume Dumas <jean-guillaume.dumas@imag.fr>
-Pascal Giorgi <pascal.giorgi@univ-perp.fr>
+Pascal Giorgi <pascal.giorgi@lirmm.fr>
 Clément Pernet <clement.pernet@imag.fr>
 Ziad Sultan <ziad.sultan@imag.fr
 Bastien Vialla <bastien.vialla@lirmm.fr>
