--- a/trunk/AUTHORS
+++ b/trunk/AUTHORS
@@ -3,5 +3,5 @@ Alexis Breust <alexis.breust@imag.fr>
 Jean-Guillaume Dumas <jean-guillaume.dumas@imag.fr>
 Pascal Giorgi <pascal.giorgi@lirmm.fr>
 Clément Pernet <clement.pernet@imag.fr>
-Ziad Sultan <ziad.sultan@imag.fr
+Ziad Sultan <ziad.sultan@imag.fr>
 Bastien Vialla <bastien.vialla@lirmm.fr>
