--- a/trunk/AUTHORS
+++ b/trunk/AUTHORS
@@ -2,6 +2,6 @@ Brice Boyer <bbboyer@ncsu.edu>
 Alexis Breust <alexis.breust@imag.fr>
 Jean-Guillaume Dumas <jean-guillaume.dumas@imag.fr>
 Pascal Giorgi <pascal.giorgi@lirmm.fr>
-Clément Pernet <clement.pernet@imag.fr>
+ClÃ©ment Pernet <clement.pernet@imag.fr>
 Ziad Sultan <ziad.sultan@imag.fr>
 Bastien Vialla <bastien.vialla@lirmm.fr>
