--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,77 @@
-2011-15-04 v1.4.0
+2015-06-11 v2.1.0
+	test suite and benchmark improvement :
+	* much larger coverage
+	* run each most tests over a wide range	 of fields
+	* systematic interface and options
+
+	new features:
+	* parallel PLUQ
+	* computation of rank profiles and rank profile matrices
+	* echelon and reduced echelon forms form both LUdivine and PLUQ
+	* getters to the forms and the transformation matrices
+	* igemm routine for BLAS like gemm on 64bits ints
+	* support of Modular<int64_t> and ModularBalanced<int64_t> using igemm,
+	to support fields of bitsize between 25 and 31
+	* support of Modular<rint<K> > for Z/pZ with p of size > 32bits (based
+	on Givaro's RecInt multiprecision integers)
+	* support of RNS based gaussian elimination on multiprecision fields
+	* Paladin: DSL for parallel programming adressing OMP, TBB and Kaapi
+	improvements:
+	* a lot of new sparse mat-vec product improvements
+	* faster parallel and sequential fgemm
+	* many bugs found and removed (no known bugs at release time)
+
+2014-08-08 v2.0.0
+	code update :
+        * rank profile
+	* clean namespaces
+	* use field one, zero, etc
+	* fix clang warnings
+	* more blas wrappers (sger, sdot, copy, etc)
+	* simplification of fgemm
+	* simplify blas detection (+cflags)
+	* easier permutation handling
+	* improve testers
+	* use std::min, max
+	* many functions have API change to use last pointer argument for return
+	* some more doc
+	* and probably many more in 2+ years !
+
+	bugs :
+	* correct permutations
+	* fix fgemm, fgemv, ftrmm, ftrsm bugs 
+	* mem leaks
+	* bugs for degenerate cases
+	* fix bounds
+	* and probably many more in 2+ years !
+
+	new features :
+	* new pluq 2x2 recursive alg
+	* leftlooking
+	* parallel OMP fgemm, ftrmm, ftrsm
+	* parallel KAAPI fgemm, ftrmm, ftrsm
+	* new testers for pluq, fgemm, etc
+	* new tester for Bini approximate formula
+	* fadd, fsub, finit, fscal, etc
+	* vectorisation using AVX(2)
+	* in place schedules
+	* new Echelon code
+	* helper design for fgemm, fgemv, etc
+	* template factorisation for modular/multiprecision fields
+	* helper traits
+	* automatic matrix field conversion (ie double -> float)
+	* add spmv kernels
+	* enable use of sparse MKL
+	* parallel.h, avx and simd files
+	* new DSL for parallelism
+	* RNS and multiprecision fields
+	* new const_cast, fflas_new etc functions
+	* element_ptr in fields
+	* use Givaro dependency (compulsory now)
+	* new test for regressions (with tickets)
+	* and probably many more in 2+ years !
+	
+2011-04-15 v1.4.0
         * Convert project  to autotools (à la LinBox et Givaro)
 2008-06-05 v1.3.3
 	* fix the design of specializations to modular<double> modular<float>
