--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -2,7 +2,7 @@
 
 	Test suite and benchmark improvement :
 	* much larger coverage
-	* run each most tests over a wide range	 of fields
+	* run  most tests over a wide range of fields
 	* systematic interface and options
 
 	New features:
