--- a/README
+++ b/README
@@ -1,11 +1,10 @@
   ******  FFLAS-FFPACK : Finite Field Linear Algebra Subroutines/Package ******  
 
-Version 2.1.0
+Version 2.2.1
 
 PURPOSE:
 
-The FFLAS-FFPACK library provides functionalities for dense linear algebra
-over word size prime finite field.
+The FFLAS-FFPACK library provides a set of basic routines for dense and some sparse linear algebra over a finite field or the ring of integers.
 
 INSTALLATION:
 
@@ -13,7 +12,9 @@ see INSTALL
 
 AVAILABILITY: from https://github.com/linbox-team/fflas-ffpack
 
-REQUIREMENTS:  A BLAS library: for ex. OpenBLAS or ATLAS
+REQUIREMENTS:
+ * A BLAS library: for ex. OpenBLAS or ATLAS
+ * Givaro version at least 4.0.1 (https://github.com/linbox-team/givaro)
 
 This library requires the GNU C++ compiler (gcc-4.7 or newer) or any 
 compiler supporting advanced template features.
@@ -25,5 +26,5 @@ The FFLAS-FFPACK website is http://linbox-team.github.io/fflas-ffpack/
 Please address your bug reports, suggestions and comments to 
 the discussion group http://groups.google.com/group/ffpack-devel
  
-Last update : June 2015
+Last update : March 2016
  
