adding Francois and Gavin as authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,9 @@
+François Bissey
 Brice Boyer <boyer.brice@gmail.com>
 Alexis Breust <alexis.breust@imag.fr>
 Jean-Guillaume Dumas <jean-guillaume.dumas@imag.fr>
 Pascal Giorgi <pascal.giorgi@lirmm.fr>
+Gavin Harisson
 Clément Pernet <clement.pernet@imag.fr>
 Ziad Sultan <ziad.sultan@imag.fr>
 Bastien Vialla <bastien.vialla@lirmm.fr>
