update Changelog for 2.2.1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,15 @@
+2016-04-08 v2.2.1
+	* many fixes to the build system
+	* more consistent use of flags and dependency to precompiled code
+	* fixes all remaining issues for the integration in SageMath
+	* numerous minor fixes to the parallel code
+
 2016-02-23 v2.2.0
 	* new precompiled interface
 	* improvements and API change for the parallel code
 	* new random matrix generators
 	* fix many bugs
-	
+
 2015-06-11 v2.1.0
 
 	Test suite and benchmark improvement :
