--- a/AUTHORS
+++ b/AUTHORS
@@ -4,6 +4,7 @@ Alexis Breust <alexis.breust@imag.fr>
 Jean-Guillaume Dumas <jean-guillaume.dumas@imag.fr>
 Pascal Giorgi <pascal.giorgi@lirmm.fr>
 Gavin Harisson
+Ashley Lesdalons
 Clément Pernet <clement.pernet@imag.fr>
 Ziad Sultan <ziad.sultan@imag.fr>
 Bastien Vialla <bastien.vialla@lirmm.fr>
