--- a/AUTHORS
+++ b/AUTHORS
@@ -1,10 +1,10 @@
-François Bissey
 Brice Boyer <boyer.brice@gmail.com>
 Alexis Breust <alexis.breust@imag.fr>
-Jean-Guillaume Dumas <jean-guillaume.dumas@imag.fr>
+Jean-Guillaume Dumas <jean-guillaume.dumas@univ-grenoble-alpes.fr>
 Pascal Giorgi <pascal.giorgi@lirmm.fr>
-Gavin Harisson
-Ashley Lesdalons
-Clément Pernet <clement.pernet@imag.fr>
+Romain Lebreton <romain.lebreton@lirmm.fr>
+Philippe Ledent
+Ozden Ozturk
+Clément Pernet <clement.pernet@univ-grenoble-alpes.fr>
 Ziad Sultan <ziad.sultan@imag.fr>
 Bastien Vialla <bastien.vialla@lirmm.fr>
