--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,10 @@
-2019-04-03 v2.4.0
+2019-04-10 v2.4.0
 	New features:
 	* fsytrf: a symmetric triangular factorization, revealign the RPM
 	* fsyrk, fsyr2k, ftrssyr2k, ftrstr: subroutines for symmetric operations
 	* support for AVX512 vectorization
-	* parallelization of fgemm-rns, fsytrf
+	* parallelization of fgemm-rns, fsytrf, echelon forms, det, rank, etc
+	* API for parallel routines outside of par-block (for e.g. SageMath)
 	Improvements:
 	* more examples
 	* more benchmarks: fgesv
@@ -13,7 +14,7 @@
 	* improved igemm
 	* improved test coverage for SIMD
 	* improved charpoly
-	* improved freduce and consequently speed of most routines
+	* improved freduce and consequently speed up most routines
 
 2017-12-21 v2.3.2
 	Improvements:
