--- a/AUTHORS
+++ b/AUTHORS
@@ -4,6 +4,7 @@ Brice Boyer <boyer.brice@gmail.com>
 Alexis Breust  https://github.com/Breush
 Jean-Guillaume Dumas <jean-guillaume.dumas@univ-grenoble-alpes.fr>
 Pascal Giorgi <pascal.giorgi@lirmm.fr>
+Quentin Houssier
 Romain Lebreton <romain.lebreton@lirmm.fr>
 Philippe Ledent
 Ozden Ozturk
@@ -17,14 +18,19 @@ François Bissey
 Nicolas Bordes
 Cyril Bouvier
 Vincent Danjean
+Dan Grayson
 Bruno Grenet
 Gavin Harisson
 Max Horn
 Jerry James
 Pierre Karpman
+Matthias Köppe
 Ashley Lesdalon
 David Lucas
 Vincent Neiger
+Dima Pasechnik
 Dan Roche
 David Saunders
+Mahrud Sayrafi
 Douglas Torrance
+Hongguang Zhu
