done review test-sss + change params in test-quasisep

--- a/AUTHORS
+++ b/AUTHORS
@@ -9,6 +9,7 @@ Romain Lebreton <romain.lebreton@lirmm.fr>
 Philippe Ledent
 Ozden Ozturk
 Clément Pernet <clement.pernet@univ-grenoble-alpes.fr>
+Hippolyte Signargout <hippolyte.signargout@ens-lyon.fr>
 Ziad Sultan <ziad.sultan@imag.fr>
 Bastien Vialla <bastien.vialla@lirmm.fr>
 
